Added filtering transactions by year and month
